# rabitQ

./: .gitignore  CMakeLists.txt  LICENSE  README  build.sh  conanfile.txt
include/: rabitQ.hpp  utils.hpp
src/: main.cpp  rabitQ.cpp
